// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders accessibility icon correctly 1`] = `
<test-file-stub
  aria-hidden={true}
  fill={undefined}
  height="24px"
  width="24px"
/>
`;

exports[`renders accessibility icon with size 1`] = `
<test-file-stub
  aria-hidden={true}
  fill={undefined}
  height="18px"
  width="18px"
/>
`;

exports[`renders accessibility icon with styles 1`] = `
<test-file-stub
  aria-hidden={true}
  fill={undefined}
  height="24px"
  style={
    Object {
      "fill": "#fff",
    }
  }
  width="24px"
/>
`;
